--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -48,7 +48,8 @@ depends_on = [
   "alex-reserve-pool",
   "yield-token-pool",
   "yield-usda",
-  "swap-helper-v1-01"
+  "swap-helper-v1-01",
+  "math-fixed-point"
 ]
 
 [contracts.yield-collateral-rebalancing-pool]
