--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -718,4 +718,4 @@ depends_on = ["trait-ownable", "trait-sip-010", "token-diko" ]
 
 [contracts.flash-loan-wstx-to-wbtc]
 path = "contracts/flash-loan-wstx-to-wbtc.clar"
-depends_on = [ "trait-sip-010", "trait-flash-loan-user", "alex-vault", "swap-helper-v1-01" ]
+depends_on = [ ]
