--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -719,3 +719,7 @@ depends_on = ["trait-ownable", "trait-sip-010", "token-diko" ]
 [contracts.flash-loan-wstx-to-wbtc]
 path = "contracts/flash-loan-wstx-to-wbtc.clar"
 depends_on = [ ]
+
+[contracts.flash-loan-wbtc-to-wstx]
+path = "contracts/flash-loan-wbtc-to-wstx.clar"
+depends_on = [ ]
