--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -518,14 +518,6 @@ depends_on = [
 path = "contracts/pool-token/fwp-alex-usda.clar"
 depends_on = [ "trait-sip-010", "trait-ownable" ]
 
-[contracts.auto-alex]
-path = "contracts/auto-token/auto-alex.clar"
-depends_on = [ "trait-sip-010", "trait-ownable" ]
-
-[contracts.yield-vault-alex]
-path = "contracts/pool/yield-vault-alex.clar"
-depends_on = [ "auto-alex", "age000-governance-token", "trait-ownable", "alex-reserve-pool" ]
-
 [contracts.fwp-alex-wbtc-50-50]
 path = "contracts/pool-token/fwp-alex-wbtc-50-50.clar"
 depends_on = [ "trait-sip-010", "trait-ownable" ]
@@ -716,18 +708,22 @@ depends_on = ["trait-ownable", "trait-sip-010"]
 path = "contracts/wrapped-token/token-wdiko.clar"
 depends_on = ["trait-ownable", "trait-sip-010", "token-diko" ]
 
+[contracts.auto-alex]
+path = "contracts/auto-token/auto-alex.clar"
+depends_on = [ "trait-sip-010", "trait-ownable", "age000-governance-token", "alex-reserve-pool" ]
+
 [contracts.auto-fwp-wstx-alex]
 path = "contracts/auto-token/auto-fwp-wstx-alex.clar"
-depends_on = [ "trait-sip-010", "trait-ownable" ]
-
-[contracts.yield-vault-fwp-wstx-alex]
-path = "contracts/pool/yield-vault-fwp-wstx-alex.clar"
-depends_on = [ "auto-fwp-wstx-alex", "age000-governance-token", "fwp-wstx-alex-50-50-v1-01", "trait-ownable", "alex-reserve-pool" ]
+depends_on = [ "trait-sip-010", "trait-ownable", "age000-governance-token", "fwp-wstx-alex-50-50-v1-01", "alex-reserve-pool" ]
 
 [contracts.auto-farm]
 path = "contracts/auto-token/auto-farm.clar"
-depends_on = [ "trait-semi-fungible", "trait-ownable" ]
+depends_on = [ "trait-semi-fungible", "trait-ownable", "age000-governance-token", "trait-ownable", "alex-reserve-pool" ]
 
-[contracts.yield-vault]
-path = "contracts/pool/yield-vault.clar"
-depends_on = [ "auto-farm", "age000-governance-token", "trait-ownable", "alex-reserve-pool" ]
+[contracts.auto-fwp-wstx-alex-120]
+path = "contracts/auto-token/auto-fwp-wstx-alex-120.clar"
+depends_on = [ "trait-sip-010", "trait-ownable", "age000-governance-token", "fwp-wstx-alex-50-50-v1-01", "alex-reserve-pool" ]
+
+[contracts.auto-fwp-wstx-alex-120x]
+path = "contracts/auto-token/auto-fwp-wstx-alex-120x.clar"
+depends_on = [ "trait-sip-010", "trait-ownable", "fixed-weight-pool-v1-01", "token-wstx", "age000-governance-token", "executor-dao" ]
