--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -712,13 +712,13 @@ depends_on = ["trait-ownable", "trait-sip-010", "token-diko" ]
 path = "contracts/auto-token/auto-alex.clar"
 depends_on = [ "trait-sip-010", "trait-ownable", "age000-governance-token", "alex-reserve-pool" ]
 
-[contracts.auto-fwp-wstx-alex]
-path = "contracts/auto-token/auto-fwp-wstx-alex.clar"
-depends_on = [ "trait-sip-010", "trait-ownable", "age000-governance-token", "fwp-wstx-alex-50-50-v1-01", "alex-reserve-pool" ]
-
 [contracts.auto-farm]
 path = "contracts/auto-token/auto-farm.clar"
 depends_on = [ "trait-semi-fungible", "trait-ownable", "age000-governance-token", "trait-ownable", "alex-reserve-pool" ]
+
+[contracts.auto-fwp-wstx-alex]
+path = "contracts/auto-token/auto-fwp-wstx-alex.clar"
+depends_on = [ "trait-sip-010", "trait-ownable", "age000-governance-token", "fwp-wstx-alex-50-50-v1-01", "alex-reserve-pool" ]
 
 [contracts.auto-fwp-wstx-alex-120]
 path = "contracts/auto-token/auto-fwp-wstx-alex-120.clar"
@@ -727,3 +727,11 @@ depends_on = [ "trait-sip-010", "trait-ownable", "age000-governance-token", "fwp
 [contracts.auto-fwp-wstx-alex-120x]
 path = "contracts/auto-token/auto-fwp-wstx-alex-120x.clar"
 depends_on = [ "trait-sip-010", "trait-ownable", "fixed-weight-pool-v1-01", "token-wstx", "age000-governance-token", "executor-dao" ]
+
+[contracts.auto-fwp-alex-usda-100]
+path = "contracts/auto-token/auto-fwp-alex-usda-100.clar"
+depends_on = [ "trait-sip-010", "trait-ownable", "age000-governance-token", "token-wusda", "fwp-alex-usda", "alex-reserve-pool" ]
+
+[contracts.auto-fwp-alex-usda-100x]
+path = "contracts/auto-token/auto-fwp-alex-usda-100x.clar"
+depends_on = [ "trait-sip-010", "trait-ownable", "simple-weight-pool-alex", "token-wusda", "age000-governance-token", "executor-dao" ]
