--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -713,10 +713,6 @@ depends_on = ["trait-ownable", "trait-sip-010", "token-diko" ]
 path = "contracts/auto-token/auto-alex.clar"
 depends_on = [ "trait-sip-010", "trait-ownable", "age000-governance-token", "alex-reserve-pool" ]
 
-[contracts.auto-farm]
-path = "contracts/auto-token/auto-farm.clar"
-depends_on = [ "trait-semi-fungible", "trait-ownable", "age000-governance-token", "trait-ownable", "alex-reserve-pool" ]
-
 [contracts.auto-fwp-wstx-alex]
 path = "contracts/auto-token/auto-fwp-wstx-alex.clar"
 depends_on = [ "trait-sip-010", "trait-ownable", "age000-governance-token", "fwp-wstx-alex-50-50-v1-01", "alex-reserve-pool" ]
@@ -760,3 +756,7 @@ depends_on = [
   "simple-weight-pool-alex",
   "trait-multisig-vote"
 ]
+
+[contracts.farming-helper]
+path = "contracts/helpers/farming-helper.clar"
+depends_on = [ "alex-reserve-pool", "trait-sip-010" ]
