--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -780,3 +780,17 @@ depends_on = [
   "simple-weight-pool-alex",
   "trait-multisig-vote"
 ]
+
+[contracts.fwp-wstx-wxusd-50-50-v1-01]
+path = "contracts/pool-token/fwp-wstx-wxusd-50-50-v1-01.clar"
+depends_on = [ "trait-sip-010", "trait-ownable" ]
+
+[contracts.multisig-fwp-wstx-wxusd-50-50-v1-01]
+path = "contracts/multisig/multisig-fwp-wstx-wxusd-50-50-v1-01.clar"
+depends_on = [
+  "fwp-wstx-wxusd-50-50-v1-01",
+  "fixed-weight-pool-v1-01",
+  "trait-multisig-vote",
+  "token-wstx",
+  "token-wxusd"
+]
