--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -854,3 +854,31 @@ depends_on = [ "auto-alex", "token-apower" ]
 [contracts.auto-fwp-alex-autoalex-x-v1-01]
 path = "contracts/auto-token/auto-fwp-alex-autoalex-x-v1-01.clar"
 depends_on = [ "trait-semi-fungible-v1-01", "trait-ownable", "simple-weight-pool-alex", "auto-alex", "age000-governance-token", "fwp-alex-autoalex" ]
+
+[contracts.fwp-wstx-wmia-50-50-v1-01]
+path = "contracts/pool-token/fwp-wstx-wmia-50-50-v1-01.clar"
+depends_on = [ "trait-sip-010", "trait-ownable" ]
+
+[contracts.multisig-fwp-wstx-wmia-50-50-v1-01]
+path = "contracts/multisig/multisig-fwp-wstx-wmia-50-50-v1-01.clar"
+depends_on = [
+  "fwp-wstx-wmia-50-50-v1-01",
+  "fixed-weight-pool-v1-01",
+  "trait-multisig-vote",
+  "token-wstx",
+  "token-wmia"
+]
+
+[contracts.fwp-wstx-wnycc-50-50-v1-01]
+path = "contracts/pool-token/fwp-wstx-wnycc-50-50-v1-01.clar"
+depends_on = [ "trait-sip-010", "trait-ownable" ]
+
+[contracts.multisig-fwp-wstx-wnycc-50-50-v1-01]
+path = "contracts/multisig/multisig-fwp-wstx-wnycc-50-50-v1-01.clar"
+depends_on = [
+  "fwp-wstx-wnycc-50-50-v1-01",
+  "fixed-weight-pool-v1-01",
+  "trait-multisig-vote",
+  "token-wstx",
+  "token-wnycc"
+]
