--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -854,3 +854,7 @@ depends_on = [ "auto-alex", "token-apower" ]
 [contracts.auto-fwp-alex-autoalex-x-v1-01]
 path = "contracts/auto-token/auto-fwp-alex-autoalex-x-v1-01.clar"
 depends_on = [ "trait-semi-fungible-v1-01", "trait-ownable", "simple-weight-pool-alex", "auto-alex", "age000-governance-token", "fwp-alex-autoalex" ]
+
+[contracts.fwp-wstx-alex-tranched-120]
+path = "contracts/pool-token/fwp-wstx-alex-tranched-120.clar"
+depends_on = [ "trait-sip-010", "trait-ownable", "age000-governance-token", "fwp-wstx-alex-50-50-v1-01", "alex-reserve-pool", "fixed-weight-pool-v1-01", "token-wstx", "age000-governance-token" ]
