--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -19,7 +19,7 @@ depends_on = [
 path = "contracts/pool/futures-pool.clar"
 depends_on = [
   "trait-ownable",
-  "trait-semi-fungible-v1-01",
+  "trait-semi-fungible",
   "trait-multisig-vote",
   "alex-reserve-pool"
 ]
@@ -35,19 +35,18 @@ depends_on = [
   "trait-sip-010",
   "trait-flash-loan-user",
   "trait-ownable",
-  "trait-semi-fungible-v1-01"
+  "trait-semi-fungible"
 ]
 
 [contracts.collateral-rebalancing-pool]
 path = "contracts/pool/collateral-rebalancing-pool.clar"
 depends_on = [
   "trait-sip-010",
-  "trait-vault",
+  "trait-ownable",
+  "trait-semi-fungible",
   "alex-vault",
   "alex-reserve-pool",
   "yield-token-pool",
-  "yield-usda",
-  "swap-helper-v1-01",
 ]
 
 [contracts.yield-collateral-rebalancing-pool]
@@ -96,11 +95,11 @@ depends_on = [
 
 [contracts.key-usda-wbtc]
 path = "contracts/key-token/key-usda-wbtc.clar"
-depends_on = ["trait-ownable", "trait-semi-fungible-v1-01"]
+depends_on = ["trait-ownable", "trait-semi-fungible"]
 
 [contracts.key-usda-wstx]
 path = "contracts/key-token/key-usda-wstx.clar"
-depends_on = ["trait-ownable", "trait-semi-fungible-v1-01"]
+depends_on = ["trait-ownable", "trait-semi-fungible"]
 
 [contracts.liquidity-bootstrapping-pool]
 path = "contracts/pool/liquidity-bootstrapping-pool.clar"
@@ -134,11 +133,11 @@ depends_on = []
 
 [contracts.multisig-crp-usda-wstx]
 path = "contracts/multisig/multisig-crp-usda-wstx.clar"
-depends_on = ["yield-usda", "key-usda-wstx", "collateral-rebalancing-pool"]
+depends_on = ["yield-usda", "key-usda-wstx", "collateral-rebalancing-pool", "trait-multisig-vote"]
 
 [contracts.multisig-ytp-yield-wbtc]
 path = "contracts/multisig/multisig-ytp-yield-wbtc.clar"
-depends_on = ["ytp-yield-wbtc", "yield-wbtc", "yield-token-pool"]
+depends_on = ["ytp-yield-wbtc", "yield-wbtc", "yield-token-pool", "trait-multisig-vote"]
 
 [contracts.token-usda]
 path = "contracts/token/token-usda.clar"
@@ -170,7 +169,7 @@ depends_on = ["trait-sip-010"]
 
 [contracts.trait-multisig-vote]
 path = "contracts/traits/trait-multisig-vote.clar"
-depends_on = ["trait-sip-010"]
+depends_on = ["trait-sip-010", "trait-semi-fungible"]
 
 [contracts.trait-oracle]
 path = "contracts/traits/trait-oracle.clar"
@@ -178,6 +177,10 @@ depends_on = []
 
 [contracts.trait-ownable]
 path = "contracts/traits/trait-ownable.clar"
+depends_on = []
+
+[contracts.trait-semi-fungible]
+path = "contracts/traits/trait-semi-fungible.clar"
 depends_on = []
 
 [contracts.trait-semi-fungible-v1-01]
@@ -199,15 +202,11 @@ depends_on = [ "math-fixed-point" ]
 [contracts.yield-token-pool]
 path = "contracts/pool/yield-token-pool.clar"
 depends_on = [
-  "alex-vault",
+  "trait-ownable",
   "trait-sip-010",
-  "trait-vault",
-  "trait-flash-loan-user",
-  "yield-token-equation",
-  "trait-semi-fungible-v1-01",
-  "fixed-weight-pool-v1-01",
+  "trait-semi-fungible",
   "alex-reserve-pool",
-  "trait-multisig-vote"
+  "alex-vault",  
 ]
 
 [contracts.lbp-alex-usda-90-10]
@@ -232,7 +231,7 @@ depends_on = [
   "yield-usda",
   "key-usda-wbtc",
   "collateral-rebalancing-pool",
-  "trait-semi-fungible-v1-01",
+  "trait-semi-fungible",
   "trait-multisig-vote"
 ]
 
@@ -242,7 +241,7 @@ depends_on = [
   "yield-wbtc",
   "key-wbtc-wbtc",
   "collateral-rebalancing-pool",
-  "trait-semi-fungible-v1-01",
+  "trait-semi-fungible",
   "trait-multisig-vote"
 ]
 
@@ -257,31 +256,31 @@ depends_on = [
 
 [contracts.multisig-ytp-yield-usda]
 path = "contracts/multisig/multisig-ytp-yield-usda.clar"
-depends_on = [ "ytp-yield-usda", "yield-usda", "yield-token-pool" ]
+depends_on = [ "ytp-yield-usda", "yield-usda", "yield-token-pool", "trait-multisig-vote" ]
 
 [contracts.key-wbtc-usda]
 path = "contracts/key-token/key-wbtc-usda.clar"
-depends_on = [ "trait-ownable", "trait-semi-fungible-v1-01" ]
+depends_on = [ "trait-ownable", "trait-semi-fungible" ]
 
 [contracts.key-wbtc-wbtc]
 path = "contracts/key-token/key-wbtc-wbtc.clar"
-depends_on = [ "trait-ownable", "trait-semi-fungible-v1-01" ]
+depends_on = [ "trait-ownable", "trait-semi-fungible" ]
 
 [contracts.yield-usda]
 path = "contracts/yield-token/yield-usda.clar"
-depends_on = ["trait-ownable", "trait-semi-fungible-v1-01"]
+depends_on = ["trait-ownable", "trait-semi-fungible"]
 
 [contracts.yield-wbtc]
 path = "contracts/yield-token/yield-wbtc.clar"
-depends_on = ["trait-ownable", "trait-semi-fungible-v1-01"]
+depends_on = ["trait-ownable", "trait-semi-fungible"]
 
 [contracts.ytp-yield-usda]
 path = "contracts/pool-token/ytp-yield-usda.clar"
-depends_on = ["trait-ownable", "trait-semi-fungible-v1-01"]
+depends_on = ["trait-ownable", "trait-semi-fungible"]
 
 [contracts.ytp-yield-wbtc]
 path = "contracts/pool-token/ytp-yield-wbtc.clar"
-depends_on = [ "trait-ownable", "trait-semi-fungible-v1-01" ]
+depends_on = [ "trait-ownable", "trait-semi-fungible" ]
 
 [contracts.alex-launchpad]
 path = "contracts/pool/alex-launchpad.clar"
@@ -289,11 +288,11 @@ depends_on = [ "trait-ownable", "trait-sip-010", "token-wstx", "executor-dao" ]
 
 [contracts.staked-alex]
 path = "contracts/staked-token/staked-alex.clar"
-depends_on = [ "trait-ownable", "trait-semi-fungible-v1-01" ]
+depends_on = [ "trait-ownable", "trait-semi-fungible" ]
 
 [contracts.staked-fwp-wstx-alex-50-50-v1-01]
 path = "contracts/staked-token/staked-fwp-wstx-alex-50-50-v1-01.clar"
-depends_on = [ "trait-ownable", "trait-semi-fungible-v1-01" ]
+depends_on = [ "trait-ownable", "trait-semi-fungible" ]
 
 [contracts.flash-loan-user-margin-wbtc-usda]
 path = "contracts/flash-loan-user-margin-wbtc-usda.clar"
@@ -404,27 +403,27 @@ depends_on = [
 
 [contracts.yield-wstx]
 path = "contracts/yield-token/yield-wstx.clar"
-depends_on = [ "trait-ownable", "trait-semi-fungible-v1-01" ]
+depends_on = [ "trait-ownable", "trait-semi-fungible" ]
 
 [contracts.multisig-ytp-yield-wstx]
 path = "contracts/multisig/multisig-ytp-yield-wstx.clar"
-depends_on = [ "ytp-yield-wstx", "yield-wstx", "yield-token-pool" ]
+depends_on = [ "ytp-yield-wstx", "yield-wstx", "yield-token-pool", "trait-multisig-vote" ]
 
 [contracts.ytp-yield-wstx]
 path = "contracts/pool-token/ytp-yield-wstx.clar"
-depends_on = [ "trait-ownable", "trait-semi-fungible-v1-01" ]
+depends_on = [ "trait-ownable", "trait-semi-fungible" ]
 
 [contracts.multisig-crp-wstx-wbtc]
 path = "contracts/multisig/multisig-crp-wstx-wbtc.clar"
-depends_on = [ "yield-wstx", "key-wstx-wbtc", "collateral-rebalancing-pool" ]
+depends_on = [ "yield-wstx", "key-wstx-wbtc", "collateral-rebalancing-pool", "trait-multisig-vote" ]
 
 [contracts.key-wstx-wbtc]
 path = "contracts/key-token/key-wstx-wbtc.clar"
-depends_on = [ "trait-ownable", "trait-semi-fungible-v1-01" ]
+depends_on = [ "trait-ownable", "trait-semi-fungible" ]
 
 [contracts.key-wstx-alex]
 path = "contracts/key-token/key-wstx-alex.clar"
-depends_on = [ "trait-ownable", "trait-semi-fungible-v1-01" ]
+depends_on = [ "trait-ownable", "trait-semi-fungible" ]
 
 [contracts.token-t-alex]
 path = "contracts/token/token-t-alex.clar"
@@ -605,7 +604,7 @@ depends_on = [
 
 [contracts.key-usda-alex]
 path = "contracts/key-token/key-usda-alex.clar"
-depends_on = [ "trait-ownable", "trait-semi-fungible-v1-01" ]
+depends_on = [ "trait-ownable", "trait-semi-fungible" ]
 
 [contracts.flash-loan-user-margin-alex-usda]
 path = "contracts/flash-loan-user-margin-alex-usda.clar"
@@ -641,11 +640,11 @@ depends_on = [
 
 [contracts.key-wbtc-alex]
 path = "contracts/key-token/key-wbtc-alex.clar"
-depends_on = [ "trait-ownable", "trait-semi-fungible-v1-01" ]
+depends_on = [ "trait-ownable", "trait-semi-fungible" ]
 
 [contracts.key-wbtc-wban]
 path = "contracts/key-token/key-wbtc-wban.clar"
-depends_on = [ "trait-ownable", "trait-semi-fungible-v1-01" ]
+depends_on = [ "trait-ownable", "trait-semi-fungible" ]
 
 [contracts.fwp-alex-autoalex]
 path = "contracts/pool-token/fwp-alex-autoalex.clar"
@@ -658,27 +657,27 @@ depends_on = [ "fwp-alex-autoalex", "simple-weight-pool-alex", "trait-multisig-v
 [contracts.multisig-crp-alex-autoalex]
 path = "contracts/multisig/multisig-crp-alex-autoalex.clar"
 depends_on = [
-  "yield-alex",
-  "key-alex-autoalex",
+  "yield-alex-v1",
+  "key-alex-autoalex-v1",
   "collateral-rebalancing-pool",
   "trait-multisig-vote"
 ]
 
 [contracts.multisig-ytp-alex]
 path = "contracts/multisig/multisig-ytp-alex.clar"
-depends_on = [ "ytp-alex", "yield-alex", "yield-token-pool" ]
+depends_on = [ "ytp-alex-v1", "yield-alex-v1", "yield-token-pool", "trait-multisig-vote" ]
 
-[contracts.key-alex-autoalex]
-path = "contracts/key-token/key-alex-autoalex.clar"
-depends_on = [ "trait-ownable", "trait-semi-fungible-v1-01" ]
+[contracts.key-alex-autoalex-v1]
+path = "contracts/key-token/key-alex-autoalex-v1.clar"
+depends_on = [ "trait-ownable", "trait-semi-fungible" ]
 
-[contracts.yield-alex]
-path = "contracts/yield-token/yield-alex.clar"
-depends_on = ["trait-ownable", "trait-semi-fungible-v1-01"]
+[contracts.yield-alex-v1]
+path = "contracts/yield-token/yield-alex-v1.clar"
+depends_on = ["trait-ownable", "trait-semi-fungible"]
 
-[contracts.ytp-alex]
-path = "contracts/pool-token/ytp-alex.clar"
-depends_on = ["trait-ownable", "trait-semi-fungible-v1-01"]
+[contracts.ytp-alex-v1]
+path = "contracts/pool-token/ytp-alex-v1.clar"
+depends_on = ["trait-ownable", "trait-semi-fungible"]
 
 [contracts.auto-ytp-alex]
 path = "contracts/auto-token/auto-ytp-alex.clar"
