--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -886,3 +886,7 @@ depends_on = ["trait-sip-010"]
 [contracts.roll-auto-helper-1]
 path = "contracts/helpers/roll-auto-helper-1.clar"
 depends_on = ["swap-helper-v1-03", "age000-governance-token", "auto-alex", "collateral-rebalancing-pool-v1", "ytp-alex-v1", "yield-alex-v1", "key-alex-autoalex-v1", "auto-ytp-alex", "auto-key-alex-autoalex" ]
+
+[contracts.total-value-locked-helper]
+path = "contracts/helpers/total-value-locked-helper.clar"
+depends_on = ["trait-sip-010", "alex-reserve-pool"]
