--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -931,3 +931,7 @@ depends_on = [ "trait-sip-010", "trait-ownable" ]
 [contracts.auto-key-xusd-xbtc]
 path = "contracts/auto-token/auto-key-xusd-xbtc.clar"
 depends_on = [ "trait-sip-010", "trait-ownable" ]
+
+[contracts.cofarm-apower-helper]
+path = "contracts/helpers/cofarm-apower-helper.clar"
+depends_on = [ "trait-ownable", "fwp-wstx-alex-tranched-64", "alex-reserve-pool", "auto-alex", "token-apower" ]
