feat: bridge-unwrap-helper

--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -939,3 +939,7 @@ depends_on = [ "trait-ownable", "fwp-wstx-alex-tranched-64", "alex-reserve-pool"
 [contracts.lottery-claim-helper]
 path = "contracts/helpers/lottery-claim-helper.clar"
 depends_on = [ "trait-ownable", "alex-lottery" ]
+
+[contracts.bridge-unwrap-helper]
+path = "contracts/helpers/bridge-unwrap-helper.clar"
+depends_on = [ "trait-ownable", "trait-sip-010" ]
