--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -943,3 +943,7 @@ depends_on = [ "trait-ownable", "alex-lottery" ]
 [contracts.bridge-unwrap-helper]
 path = "contracts/helpers/bridge-unwrap-helper.clar"
 depends_on = [ "trait-ownable", "trait-sip-010" ]
+
+[contracts.token-wxusd-tokensoft]
+path = "contracts/wrapped-token/token-wxusd-tokensoft.clar"
+depends_on = [ "trait-ownable", "trait-sip-010"]
