--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -1,6 +1,9 @@
 [project]
 name = "alex-v1"
-requirements = [ ]
+
+[[project.requirements]]
+contract_id = "ST287GF5M9WEJ6BXEN7NPN1WGA95YWXWBE0ZRK6X.Wrapped-USD"
+
 
 [repl]
 costs_version = 2
