--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -950,3 +950,7 @@ depends_on = [ "trait-ownable", "trait-sip-010" ]
 [contracts.token-wxusd-tokensoft]
 path = "contracts/wrapped-token/token-wxusd-tokensoft.clar"
 depends_on = [ "trait-ownable", "trait-sip-010"]
+
+[contracts.faucet-xusd-tokensoft]
+path = "contracts/helpers/faucet-xusd-tokensoft.clar"
+depends_on = [ "token-wxusd-tokensoft" ]
